sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-data-profiles/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataProfiles
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-profiles
    sas.com/admin: namespace
  name: sas-data-profiles
spec:
  host: $(INGRESS_HOST)
  path: /dataProfiles
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-profiles
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataProfiles
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-profiles
    sas.com/admin: namespace
  name: sas-data-profiles-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /dataProfiles
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-profiles
  wildcardPolicy: Subdomain
